Add task update and delete APIs
